
Please send Loris bug reports to loris@cerlsoundgroup.org.

-------------------------------------------------------
changes since 1.1 release:

- added rewritten AiffFile and SpcFile classes, with 
interfaces that allow Partials to be added directly
and automatically rendered, and that include access
to Aiff-style Markers (time-string pairs, represented
by the new class Marker).

- Tcl module is no longer built by default, only the 
Python module.

- added AiffFile Marker access to scripting module.

- added sampleVector_fill to procedural interface, and
to its documentation.

-------------------------------------------------------
changes since 1.0.2 release:

- added window sidelobeLevel parameter to Analyzer, 
decoupled it from the amplitude floor.

- bandwidth (noise) association can now be disabled in 
Analyzer by setting bwRegionWidth to 0.

- softened amplitude floor in Analyzer, now amplitudes 
near (within 10dB) of the amplitude floor are faded out,
instead of suddenly being eliminated at the threshold.

- added split member function to Partial, for breaking
a Partial at a specified position (iterator).

- added absorb member function to Partial, for absorbing
another Partial's energy as noise (bandwidth).

- changed Partial::erase to return an iterator refering
to the position after the erasure, or end if the last
Breakpoint it erased.

- added Partial constructor from a half-open range
delimited by Partial::const_iterators (documented too).

- added new, simpler, Python 2.2-style iterators to the
scripting interface. Eventually these will replace the
old STL-style ones, but for now they coexist.

- added some new functors to PartialUtils and 
BreakpointUtils.

- added Resampler class for sampling Partial data at a 
uniform rate, making it easier to use with real-time
rendering systems. Also added resample function to scripting
and procedural interfaces.

- updated documentation

-------------------------------------------------------